@@ -1,6 +1,11 @@
 package com.ssms.ordermanagement.service;
 
+import com.ssms.ordermanagement.dto.*;
 import com.ssms.ordermanagement.entity.Order;
+import com.ssms.ordermanagement.entity.OrderItem;
+import com.ssms.ordermanagement.entity.OrderStatus;
+import com.ssms.ordermanagement.exception.InvalidOrderStateException;
+import com.ssms.ordermanagement.exception.OrderNotFoundException;
 import com.ssms.ordermanagement.repository.OrderRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -32,300 +37,279 @@ class OrderServiceTest {
     private OrderService orderService;
 
     private Order sampleOrder;
-    private List<Order.OrderItem> orderItems;
+    private CreateOrderRequest createRequest;
 
     @BeforeEach
     void setUp() {
-        // Create sample order items
-        orderItems = new ArrayList<>();
-        Order.OrderItem item1 = new Order.OrderItem();
-        item1.setProductId(101L);
-        item1.setProductName("Smart Thermostat");
-        item1.setProductCategory("Climate Control");
-        item1.setQuantity(2);
-        item1.setUnitPrice(new BigDecimal("149.99"));
-        item1.setSubtotal(new BigDecimal("299.98"));
-        orderItems.add(item1);
+        // Build a sample Order entity (as returned from DB)
+        OrderItem item = OrderItem.builder()
+                .orderItemId(1)
+                .productId(101)
+                .quantity(2)
+                .unitPriceAtOrder(new BigDecimal("149.99"))
+                .discountPercent(BigDecimal.ZERO)
+                .build();
 
-        // Create sample order
-        sampleOrder = new Order();
-        sampleOrder.setId(1L);
-        sampleOrder.setOrderId("ORD-20260131-A1B2");
-        sampleOrder.setCustomerId(1L);
-        sampleOrder.setCustomerName("John Doe");
-        sampleOrder.setCustomerEmail("john@example.com");
-        sampleOrder.setShippingAddress("123 Main St, City, State 12345");
-        sampleOrder.setItems(orderItems);
-        sampleOrder.setTotalAmount(new BigDecimal("299.98"));
-        sampleOrder.setStatus(Order.OrderStatus.PENDING);
-        sampleOrder.setOrderDate(LocalDateTime.now());
-        sampleOrder.setNotes("Test order");
+        sampleOrder = Order.builder()
+                .orderId(1)
+                .orderNumber("ORD-20260228-A1B2")
+                .customerId(1)
+                .createdByUserId(1)
+                .shippingAddress("123 Main St, City, State 12345")
+                .shippingCity("Colombo")
+                .totalAmount(new BigDecimal("299.98"))
+                .status(OrderStatus.PENDING)
+                .orderDate(LocalDateTime.now())
+                .notes("Test order")
+                .items(new ArrayList<>())
+                .build();
+        sampleOrder.addItem(item);
+
+        // Build a CreateOrderRequest
+        OrderItemRequest itemReq = OrderItemRequest.builder()
+                .productId(101)
+                .quantity(2)
+                .unitPriceAtOrder(new BigDecimal("149.99"))
+                .discountPercent(BigDecimal.ZERO)
+                .build();
+
+        createRequest = CreateOrderRequest.builder()
+                .customerId(1)
+                .createdByUserId(1)
+                .shippingAddress("123 Main St, City, State 12345")
+                .shippingCity("Colombo")
+                .notes("Test order")
+                .items(List.of(itemReq))
+                .build();
     }
+
+    // ─── Place Order ────────────────────────────────────────────
 
     @Test
     void testPlaceOrder_Success() {
-        when(orderRepository.existsByOrderId(anyString())).thenReturn(false);
+        when(orderRepository.existsByOrderNumber(anyString())).thenReturn(false);
         when(orderRepository.save(any(Order.class))).thenReturn(sampleOrder);
 
-        Order result = orderService.placeOrder(sampleOrder);
+        OrderResponse result = orderService.placeOrder(createRequest);
 
         assertThat(result).isNotNull();
-        assertThat(result.getOrderId()).isNotNull();
-        assertThat(result.getStatus()).isEqualTo(Order.OrderStatus.PENDING);
-        assertThat(result.getOrderDate()).isNotNull();
-
+        assertThat(result.getOrderNumber()).isNotNull();
+        assertThat(result.getStatus()).isEqualTo(OrderStatus.PENDING);
         verify(orderRepository, times(1)).save(any(Order.class));
     }
 
+    // ─── Get Order ──────────────────────────────────────────────
+
     @Test
     void testGetOrderById_Success() {
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(sampleOrder));
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
 
-        Order result = orderService.getOrderById(1L);
+        OrderResponse result = orderService.getOrderById(1);
 
         assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo(1L);
-        assertThat(result.getOrderId()).isEqualTo("ORD-20260131-A1B2");
-
-        verify(orderRepository, times(1)).findById(1L);
+        assertThat(result.getOrderId()).isEqualTo(1);
+        assertThat(result.getOrderNumber()).isEqualTo("ORD-20260228-A1B2");
+        verify(orderRepository, times(1)).findById(1);
     }
 
     @Test
     void testGetOrderById_NotFound() {
-        when(orderRepository.findById(999L)).thenReturn(Optional.empty());
+        when(orderRepository.findById(999)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> orderService.getOrderById(999L))
-                .isInstanceOf(RuntimeException.class)
+        assertThatThrownBy(() -> orderService.getOrderById(999))
+                .isInstanceOf(OrderNotFoundException.class)
                 .hasMessageContaining("Order not found with id: 999");
     }
 
     @Test
-    void testGetOrderByOrderId_Success() {
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
+    void testGetOrderByOrderNumber_Success() {
+        when(orderRepository.findByOrderNumber("ORD-20260228-A1B2"))
                 .thenReturn(Optional.of(sampleOrder));
 
-        Order result = orderService.getOrderByOrderId("ORD-20260131-A1B2");
+        OrderResponse result = orderService.getOrderByOrderNumber("ORD-20260228-A1B2");
 
         assertThat(result).isNotNull();
-        assertThat(result.getOrderId()).isEqualTo("ORD-20260131-A1B2");
-
-        verify(orderRepository, times(1)).findByOrderId("ORD-20260131-A1B2");
+        assertThat(result.getOrderNumber()).isEqualTo("ORD-20260228-A1B2");
     }
 
     @Test
-    void testGetOrderByOrderId_NotFound() {
-        when(orderRepository.findByOrderId("INVALID")).thenReturn(Optional.empty());
+    void testGetOrderByOrderNumber_NotFound() {
+        when(orderRepository.findByOrderNumber("INVALID")).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> orderService.getOrderByOrderId("INVALID"))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Order not found with orderId: INVALID");
+        assertThatThrownBy(() -> orderService.getOrderByOrderNumber("INVALID"))
+                .isInstanceOf(OrderNotFoundException.class)
+                .hasMessageContaining("Order not found with order number: INVALID");
     }
 
     @Test
     void testGetAllOrders() {
-        List<Order> orders = Arrays.asList(sampleOrder);
-        when(orderRepository.findAll()).thenReturn(orders);
+        when(orderRepository.findAll()).thenReturn(List.of(sampleOrder));
 
-        List<Order> result = orderService.getAllOrders();
+        List<OrderResponse> result = orderService.getAllOrders();
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getOrderId()).isEqualTo("ORD-20260131-A1B2");
-
-        verify(orderRepository, times(1)).findAll();
+        assertThat(result.get(0).getOrderNumber()).isEqualTo("ORD-20260228-A1B2");
     }
 
     @Test
     void testGetOrderHistory() {
-        List<Order> orderHistory = Arrays.asList(sampleOrder);
-        when(orderRepository.findByCustomerIdOrderByOrderDateDesc(1L))
-                .thenReturn(orderHistory);
+        when(orderRepository.findByCustomerIdOrderByOrderDateDesc(1))
+                .thenReturn(List.of(sampleOrder));
 
-        List<Order> result = orderService.getOrderHistory(1L);
+        List<OrderResponse> result = orderService.getOrderHistory(1);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getCustomerId()).isEqualTo(1L);
-
-        verify(orderRepository, times(1)).findByCustomerIdOrderByOrderDateDesc(1L);
+        assertThat(result.get(0).getCustomerId()).isEqualTo(1);
     }
 
+    // ─── Update Status ──────────────────────────────────────────
+
     @Test
-    void testUpdateOrderDetails_Success() {
-        Order updateData = new Order();
-        updateData.setCustomerName("Jane Smith");
-        updateData.setShippingAddress("456 New Address");
-        updateData.setNotes("Updated notes");
+    void testUpdateOrderStatus_PendingToShipped() {
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
+        when(orderRepository.save(any(Order.class))).thenAnswer(inv -> inv.getArgument(0));
 
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-        when(orderRepository.save(any(Order.class))).thenReturn(sampleOrder);
+        OrderResponse result = orderService.updateOrderStatus(1,
+                new UpdateOrderStatusRequest(OrderStatus.SHIPPED));
 
-        Order result = orderService.updateOrderDetails("ORD-20260131-A1B2", updateData);
-
-        assertThat(result).isNotNull();
+        assertThat(result.getStatus()).isEqualTo(OrderStatus.SHIPPED);
         verify(orderRepository, times(1)).save(any(Order.class));
     }
 
     @Test
-    void testUpdateOrderDetails_CannotUpdateDelivered() {
-        sampleOrder.setStatus(Order.OrderStatus.DELIVERED);
-        Order updateData = new Order();
-        updateData.setCustomerName("Jane Smith");
+    void testUpdateOrderStatus_ShippedToDelivered() {
+        sampleOrder.setStatus(OrderStatus.SHIPPED);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
+        when(orderRepository.save(any(Order.class))).thenAnswer(inv -> inv.getArgument(0));
 
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
+        OrderResponse result = orderService.updateOrderStatus(1,
+                new UpdateOrderStatusRequest(OrderStatus.DELIVERED));
 
-        assertThatThrownBy(() -> 
-                orderService.updateOrderDetails("ORD-20260131-A1B2", updateData))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Cannot update a delivered order");
+        assertThat(result.getStatus()).isEqualTo(OrderStatus.DELIVERED);
     }
 
     @Test
-    void testUpdateOrderDetails_CannotUpdateCancelled() {
-        sampleOrder.setStatus(Order.OrderStatus.CANCELLED);
-        Order updateData = new Order();
-        updateData.setCustomerName("Jane Smith");
+    void testUpdateOrderStatus_InvalidTransition_PendingToDelivered() {
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
 
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-
-        assertThatThrownBy(() -> 
-                orderService.updateOrderDetails("ORD-20260131-A1B2", updateData))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Cannot update a cancelled order");
-    }
-
-    @Test
-    void testUpdateOrderStatus_ToShipped() {
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-        when(orderRepository.save(any(Order.class))).thenReturn(sampleOrder);
-
-        Order result = orderService.updateOrderStatus("ORD-20260131-A1B2", 
-                Order.OrderStatus.SHIPPED);
-
-        assertThat(result.getStatus()).isEqualTo(Order.OrderStatus.SHIPPED);
-        assertThat(result.getShippedDate()).isNotNull();
-
-        verify(orderRepository, times(1)).save(any(Order.class));
-    }
-
-    @Test
-    void testUpdateOrderStatus_ToDelivered() {
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-        when(orderRepository.save(any(Order.class))).thenReturn(sampleOrder);
-
-        Order result = orderService.updateOrderStatus("ORD-20260131-A1B2", 
-                Order.OrderStatus.DELIVERED);
-
-        assertThat(result.getStatus()).isEqualTo(Order.OrderStatus.DELIVERED);
-        assertThat(result.getDeliveredDate()).isNotNull();
-
-        verify(orderRepository, times(1)).save(any(Order.class));
+        assertThatThrownBy(() -> orderService.updateOrderStatus(1,
+                new UpdateOrderStatusRequest(OrderStatus.DELIVERED)))
+                .isInstanceOf(InvalidOrderStateException.class)
+                .hasMessageContaining("Invalid status transition");
     }
 
     @Test
     void testUpdateOrderStatus_CannotUpdateCancelled() {
-        sampleOrder.setStatus(Order.OrderStatus.CANCELLED);
+        sampleOrder.setStatus(OrderStatus.CANCELLED);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
 
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-
-        assertThatThrownBy(() -> 
-                orderService.updateOrderStatus("ORD-20260131-A1B2", Order.OrderStatus.SHIPPED))
-                .isInstanceOf(RuntimeException.class)
+        assertThatThrownBy(() -> orderService.updateOrderStatus(1,
+                new UpdateOrderStatusRequest(OrderStatus.SHIPPED)))
+                .isInstanceOf(InvalidOrderStateException.class)
                 .hasMessageContaining("Cannot update status of a cancelled order");
     }
 
+    // ─── Cancel Order ───────────────────────────────────────────
+
     @Test
     void testCancelOrder_Success() {
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-        when(orderRepository.save(any(Order.class))).thenReturn(sampleOrder);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
+        when(orderRepository.save(any(Order.class))).thenAnswer(inv -> inv.getArgument(0));
 
-        Order result = orderService.cancelOrder("ORD-20260131-A1B2", "Customer request");
+        OrderResponse result = orderService.cancelOrder(1,
+                new CancelOrderRequest("Customer request"));
 
-        assertThat(result.getStatus()).isEqualTo(Order.OrderStatus.CANCELLED);
-        assertThat(result.getCancelledDate()).isNotNull();
+        assertThat(result.getStatus()).isEqualTo(OrderStatus.CANCELLED);
+        assertThat(result.getCancelledAt()).isNotNull();
         assertThat(result.getCancellationReason()).isEqualTo("Customer request");
-
-        verify(orderRepository, times(1)).save(any(Order.class));
     }
 
     @Test
     void testCancelOrder_CannotCancelDelivered() {
-        sampleOrder.setStatus(Order.OrderStatus.DELIVERED);
+        sampleOrder.setStatus(OrderStatus.DELIVERED);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
 
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-
-        assertThatThrownBy(() -> 
-                orderService.cancelOrder("ORD-20260131-A1B2", "Too late"))
-                .isInstanceOf(RuntimeException.class)
+        assertThatThrownBy(() -> orderService.cancelOrder(1,
+                new CancelOrderRequest("Too late")))
+                .isInstanceOf(InvalidOrderStateException.class)
                 .hasMessageContaining("Cannot cancel a delivered order");
     }
 
     @Test
     void testCancelOrder_AlreadyCancelled() {
-        sampleOrder.setStatus(Order.OrderStatus.CANCELLED);
+        sampleOrder.setStatus(OrderStatus.CANCELLED);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
 
-        when(orderRepository.findByOrderId("ORD-20260131-A1B2"))
-                .thenReturn(Optional.of(sampleOrder));
-
-        assertThatThrownBy(() -> 
-                orderService.cancelOrder("ORD-20260131-A1B2", "Duplicate"))
-                .isInstanceOf(RuntimeException.class)
+        assertThatThrownBy(() -> orderService.cancelOrder(1,
+                new CancelOrderRequest("Duplicate")))
+                .isInstanceOf(InvalidOrderStateException.class)
                 .hasMessageContaining("Order is already cancelled");
     }
 
     @Test
-    void testGetOrdersByStatus() {
-        List<Order> pendingOrders = Arrays.asList(sampleOrder);
-        when(orderRepository.findByStatus(Order.OrderStatus.PENDING))
-                .thenReturn(pendingOrders);
+    void testCancelOrder_CannotCancelShipped() {
+        sampleOrder.setStatus(OrderStatus.SHIPPED);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
 
-        List<Order> result = orderService.getOrdersByStatus(Order.OrderStatus.PENDING);
+        assertThatThrownBy(() -> orderService.cancelOrder(1,
+                new CancelOrderRequest("Changed mind")))
+                .isInstanceOf(InvalidOrderStateException.class)
+                .hasMessageContaining("Cannot cancel a shipped order");
+    }
+
+    // ─── Filter queries ─────────────────────────────────────────
+
+    @Test
+    void testGetOrdersByStatus() {
+        when(orderRepository.findByStatus(OrderStatus.PENDING))
+                .thenReturn(List.of(sampleOrder));
+
+        List<OrderResponse> result = orderService.getOrdersByStatus(OrderStatus.PENDING);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getStatus()).isEqualTo(Order.OrderStatus.PENDING);
-
-        verify(orderRepository, times(1)).findByStatus(Order.OrderStatus.PENDING);
+        assertThat(result.get(0).getStatus()).isEqualTo(OrderStatus.PENDING);
     }
 
     @Test
     void testGetOrdersByDateRange() {
         LocalDateTime startDate = LocalDateTime.now().minusDays(7);
         LocalDateTime endDate = LocalDateTime.now();
-        List<Order> orders = Arrays.asList(sampleOrder);
 
         when(orderRepository.findByOrderDateBetween(startDate, endDate))
-                .thenReturn(orders);
+                .thenReturn(List.of(sampleOrder));
 
-        List<Order> result = orderService.getOrdersByDateRange(startDate, endDate);
+        List<OrderResponse> result = orderService.getOrdersByDateRange(startDate, endDate);
 
         assertThat(result).hasSize(1);
-        verify(orderRepository, times(1)).findByOrderDateBetween(startDate, endDate);
     }
 
     @Test
     void testGetRecentOrders() {
-        List<Order> recentOrders = Arrays.asList(sampleOrder);
         when(orderRepository.findRecentOrders(any(LocalDateTime.class)))
-                .thenReturn(recentOrders);
+                .thenReturn(List.of(sampleOrder));
 
-        List<Order> result = orderService.getRecentOrders();
+        List<OrderResponse> result = orderService.getRecentOrders();
 
         assertThat(result).hasSize(1);
-        verify(orderRepository, times(1)).findRecentOrders(any(LocalDateTime.class));
     }
+
+    // ─── Delete ─────────────────────────────────────────────────
 
     @Test
     void testDeleteOrder() {
-        doNothing().when(orderRepository).deleteById(1L);
+        when(orderRepository.findById(1)).thenReturn(Optional.of(sampleOrder));
+        doNothing().when(orderRepository).delete(any(Order.class));
 
-        orderService.deleteOrder(1L);
+        orderService.deleteOrder(1);
 
-        verify(orderRepository, times(1)).deleteById(1L);
+        verify(orderRepository, times(1)).delete(any(Order.class));
+    }
+
+    @Test
+    void testDeleteOrder_NotFound() {
+        when(orderRepository.findById(999)).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> orderService.deleteOrder(999))
+                .isInstanceOf(OrderNotFoundException.class);
     }
 }
